--- a/linux-sunlight-generic/debian.generic/control.stub.in
+++ b/linux-sunlight-generic/debian.generic/control.stub.in
@@ -112,7 +112,7 @@ Build-Profiles: <!stage1>
 Architecture: amd64 armhf arm64 ppc64el s390x
 Section: devel
 Priority: optional
-Depends: ${misc:Depends}, ${shlibs:Depends}, linux-tools-common
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: Linux kernel version specific tools for version PKGVER-ABINUM
  This package provides the architecture dependant parts for kernel
  version locked tools (such as perf and x86_energy_perf_policy) for
@@ -136,7 +136,7 @@ Build-Profiles: <!stage1>
 Architecture: amd64 armhf
 Section: devel
 Priority: optional
-Depends: ${misc:Depends}, ${shlibs:Depends}, linux-cloud-tools-common
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: Linux kernel version specific cloud tools for version PKGVER-ABINUM
  This package provides the architecture dependant parts for kernel
  version locked tools for cloud tools for version PKGVER-ABINUM on
