--- a/linux-sunlight-lowlatency/debian.lowlatency/etc/update.conf
+++ b/linux-sunlight-lowlatency/debian.lowlatency/etc/update.conf
@@ -2,6 +2,7 @@
 # derivative. Various cranky components make use of this.
 # If we start unconditionally creating update.conf we need
 # to fix at least cranky close and cranky rebase.
-RELEASE_REPO=git://git.launchpad.net/~ubuntu-kernel/ubuntu/+source/linux/+git/kinetic
-SOURCE_RELEASE_BRANCH=master-next
-DEBIAN_MASTER=debian.master
+RELEASE_REPO=https://github.com/ionutnechita/linux-sunlight-integration.git
+SOURCE_REPO=https://github.com/ionutnechita/linux-sunlight.git
+SOURCE_RELEASE_BRANCH=5.18
+DEBIAN_MASTER=debian.lowlatency
