--- a/linux-sunlight-lowlatency/debian/tests/control
+++ b/linux-sunlight-lowlatency/debian/tests/control
@@ -2,6 +2,6 @@ Tests: rebuild
 Depends: @builddeps@, fakeroot
 Restrictions: allow-stderr, skippable
 
-Tests: ubuntu-regression-suite
+Tests: sunlight-regression-suite
 Depends: build-essential, gcc-multilib [amd64 armhf i386], gdb, git, python2 | python, bzr
 Restrictions: allow-stderr, isolation-machine, breaks-testbed, skippable
